<resources>
    <string name="app_name">Akbarrych</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="phone">phone number</string>
    <string name="code">enter your code</string>
    <string name="reg">registration</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="your_name">Your Name</string>
    <string name="number_phone">Number Phone</string>
    <string name="your_gender">Your Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save_profile">Save</string>
    <string name="description">description</string>
    <string name="todo">TODO</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="_996">+996 </string>
    <string name="sign_out">sign out</string>

</resources>